# splined

./: README.md
src/: CMakeLists.txt  KnotVectorType.hpp  SplineDataModel.cpp  SplineDataModel.hpp  SplineEditorApp.cpp  SplineEditorApp.hpp  bspline.hpp  main_gui.cpp
src/widgets/: KnotVectorWidget.cpp  KnotVectorWidget.hpp  NodeEditorWidget.cpp  NodeEditorWidget.hpp  SettingsWidget.cpp  SettingsWidget.hpp  SplineEditorNode.cpp  SplineEditorNode.hpp  SplineEditorScene.cpp  SplineEditorScene.hpp  SplineEditorView.cpp  SplineEditorView.hpp  SplineEditorWidget.cpp  SplineEditorWidget.hpp
